base/rhdh/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-rhdh
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: developer-hub
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: ingress
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-rhdh-to-postgresql
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: developer-hub
      ports:
        - protocol: TCP
          port: 5432
  policyTypes:
    - Ingress
